<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.main.home.view.HomeActivity">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TasksSection" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ReportsSection" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ManageTasksSection" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SettingsSections" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/taskTrackPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        </androidx.viewpager.widget.ViewPager>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/taskTrackPanel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/border_circled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/taskPanelImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_add_task_circle_100dp"
                app:civ_border_color="#008577"
                app:civ_border_overlay="true"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="#80FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonPause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/buttonStart"
                android:background="@drawable/ic_pause_blue_50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
                app:layout_constraintEnd_toStartOf="@+id/buttonStart"
                app:layout_constraintTop_toTopOf="@+id/buttonStart" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/ic_play_arrow_green_50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskPanelName"
                style="@style/EditReportHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/SelectTaskText"
                app:layout_constraintStart_toEndOf="@+id/taskPanelImage"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>