<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsCardsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/clearTasksCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/clearTasksText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/ClearAllTasks"
                    android:theme="@style/SettingsHeaderStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/clearTasksIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_warning_green_50dp"
                    app:layout_constraintStart_toStartOf="@+id/clearTasksText"
                    app:layout_constraintTop_toBottomOf="@+id/clearTasksText" />

                <TextView
                    android:id="@+id/clearTasksWarningText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/ClearAllTasksWarning"
                    android:theme="@style/SettingsWarningGreenStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/clearTasksText"
                    app:layout_constraintStart_toEndOf="@+id/clearTasksIcon"
                    app:layout_constraintTop_toBottomOf="@+id/clearTasksText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/deleteReportsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/clearTasksCard"
            app:layout_constraintStart_toStartOf="@+id/clearTasksCard"
            app:layout_constraintTop_toBottomOf="@+id/clearTasksCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deleteReportsText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/DeleteAllReports"
                    android:theme="@style/SettingsHeaderStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/deleteReportsIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_warning_red_50dp"
                    app:layout_constraintStart_toStartOf="@+id/deleteReportsText"
                    app:layout_constraintTop_toBottomOf="@+id/deleteReportsText" />

                <TextView
                    android:id="@+id/deleteReportsWarning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/DeleteAllReportsWarning"
                    android:theme="@style/SettingsWarningRedStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/deleteReportsText"
                    app:layout_constraintStart_toEndOf="@+id/deleteReportsIcon"
                    app:layout_constraintTop_toBottomOf="@+id/deleteReportsText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/deleteTaskAndReportsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/clearTasksCard"
            app:layout_constraintStart_toStartOf="@+id/clearTasksCard"
            app:layout_constraintTop_toBottomOf="@+id/deleteReportsCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deleteTaskAndReportText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/DeleteAllTasksAndReports"
                    android:theme="@style/SettingsHeaderStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/deleteTaskAndReportIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_warning_red_50dp"
                    app:layout_constraintStart_toStartOf="@+id/deleteTaskAndReportText"
                    app:layout_constraintTop_toBottomOf="@+id/deleteTaskAndReportText" />

                <TextView
                    android:id="@+id/deleteTaskAndReportWarningText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/DeleteAllTasksAndReportsWarning"
                    android:theme="@style/SettingsWarningRedStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/deleteTaskAndReportText"
                    app:layout_constraintStart_toEndOf="@+id/deleteTaskAndReportIcon"
                    app:layout_constraintTop_toBottomOf="@+id/deleteTaskAndReportText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>