<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/border_green"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/taskImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_circle_background_color="@color/colorTransparent"
        app:civ_border_width="3dp"
        app:civ_border_overlay="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:theme="@style/EditReportHeaderStyle"
        app:layout_constraintEnd_toStartOf="@+id/deleteReportButton"
        app:layout_constraintStart_toEndOf="@+id/taskImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/deleteReportButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_delete_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spentTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:theme="@style/EditReportHeaderStyle"
        app:layout_constraintEnd_toEndOf="@+id/taskName"
        app:layout_constraintStart_toStartOf="@+id/taskName"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskImage" />

    <TextView
        android:id="@+id/startTimeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:singleLine="true"
        android:theme="@style/StartAndEndTimeStyle"
        android:text="@string/StartTimeText"
        style="@style/EditReportInfos"
        app:layout_constraintEnd_toStartOf="@+id/startDateValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/startDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        style="@style/EditReportInfos"
        app:layout_constraintEnd_toStartOf="@+id/startTimeValue"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/startTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:singleLine="true"
        android:theme="@style/StartAndEndTimeStyle"
        style="@style/EditReportInfos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/finishTimeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/EndTimeText"
        android:theme="@style/StartAndEndTimeStyle"
        style="@style/EditReportInfos"
        app:layout_constraintEnd_toEndOf="@+id/startTimeText"
        app:layout_constraintStart_toStartOf="@+id/startTimeText"
        app:layout_constraintTop_toBottomOf="@+id/startTimeText" />

    <TextView
        android:id="@+id/finishDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditReportInfos"
        app:layout_constraintEnd_toEndOf="@+id/startDateValue"
        app:layout_constraintStart_toStartOf="@+id/startDateValue"
        app:layout_constraintTop_toBottomOf="@+id/startDateValue" />

    <TextView
        android:id="@+id/finishTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditReportInfos"
        android:theme="@style/StartAndEndTimeStyle"
        app:layout_constraintEnd_toEndOf="@+id/startTimeValue"
        app:layout_constraintTop_toBottomOf="@+id/startTimeValue" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishTimeText" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ConfirmButton"
        style="@style/WhiteButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/WhiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/CancelButton"
        app:layout_constraintBottom_toBottomOf="@+id/confirmButton"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>